[package]
name = "worker-router"
version = "1.0.0"
edition = "2021"
authors = [ "Sven Sauleau <sven@sauleau.com>" ]
description = "HTTP router for Cloudflare Workers"
license = "MIT"
keywords = ["http", "router", "cloudflare", "worker"]
repository = "https://github.com/xtuc/worker-router"

[dependencies]
worker = "0"
urlpattern = "0.3.0"
